[package]
name = "fuz_json_parser"
version = "0.1.0"
authors = ["FuzzyNovaGoblin <fuzzy.nova.goblin@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
args = "2.2.0"
getopts = "0.2.21"
