[package]
name = "fuz_json_parser"
version = "0.1.0"
authors = ["FuzzyNovaGoblin <fuzzy.nova.goblin@outlook.com>"]
edition = "2021"
license = "MIT"
description = "a json parser"
repository = "https://github.com/FuzzyNovaGoblin/fuz_json_parser"
readme = "README.md"
keywords = ["json", "parser", "json_parser"]
exclude = ["test_files/*", "examples/test_runner.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
args = "2.2.0"
getopts = "0.2.21"
json = "0.12.4"
